<resources>
    <string name="app_name">NeuroGraph</string>
    <string name="welcome_activity_bottom_text">© Copyright Jiashu Wu and Xuanchi Liu</string>
    <string name="welcome_activity_bottom_date">The University of Sydney 2018.3</string>
    <string name="setting_page_choose_language">Please choose language</string>
    <string name="english">English (EN_GB)</string>
    <string name="chinese_simplified">Simplified Chinese (CH_ZN)</string>
    <string name="chinese_traditional">Traditional Chinese (CH_TW)</string>
    <string-array name="language_array">
        <item>English</item>
        <item>Simplified Chinese</item>
        <item>Traditional Chinese</item>
        <item>Dutch</item>
        <item>French</item>
        <item>German</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Spanish</item>
    </string-array>
    <string-array name="font_array">
        <item>Normal</item>
        <item>Large</item>
    </string-array>
    <string name="setting_page_choose_font_size">Please choose font size</string>
    <string name="normal_font_size">Normal</string>
    <string name="large_font_size">Large</string>
    <string name="welcome">Welcome to NeuroGraph</string>
    <string name="setting_page_start_button">Let\'s Start</string>
    <string name="information_collection_preface">Here, we need to collect some of your personal information in order to make the service better and more accurate.</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Please Enter Your Full Name</string>
    <string name="age">Age</string>
    <string name="enter_age">Please Enter Your Age</string>
    <string name="gender">Gender</string>
    <string name="enter_gender">Please Select Your Gender</string>
    <string-array name="gender_list">
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>
    </string-array>
    <string name="select_education">Please Select Your Education Level</string>
    <string-array name="education_level">
        <item>Primary School or below</item>
        <item>High School</item>
        <item>Undergraduate</item>
        <item>Postgraduate</item>
        <item>Doctor or higher</item>
    </string-array>
    <string name="rating_score">Previous Alzheimer Rating Score (If Applicable), otherwise leave it as blank</string>
    <string name="enter_rating_score">Please Enter Your Rating Score</string>
    <string name="current_receiving_treatment">Are you currently receiving treatment? </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="next">Next</string>
    <string name="title_activity_information_collection">Collect some information</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_selection">Tests</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="static_tests">Static Tests</string>
    <string name="dynamic_tests">Dynamic Tests</string>
    <string name="data_list">Data List</string>
    <string name="test1">Test 1</string>
    <string name="test2">Test 2</string>
    <string name="test3">Test 3</string>
    <string name="test4">Test 4</string>
    <string name="title_activity_image_selection">ImageSelectionActivity</string>
    <string name="spiral_image">Spiral</string>
    <string name="pentagon_image">Pentagon</string>
    <string name="finish_button">Finish</string>
    <string name="clear_button">Clear</string>
    <string name="thank_you">Thank you for your participation</string>
    <string name="information_empty">Information Empty</string>
    <string name="information_invalid">Information Invalid</string>
    <string name="name_empty">Name cannot be empty</string>
    <string name="age_empty">Age cannot be empty</string>
    <string name="age_invalid">Invalid Age</string>
    <string name="rating_score_empty">Rating score cannot be empty</string>
    <string name="rating_score_invalid">Invalid rating score</string>
    <string name="treatment_empty">Please select treatment information</string>
    <string name="dismiss">Dismiss</string>
    <string name="title_activity_data_list">Data List</string>
    <string name="data_list_button">Data List</string>
    <string name="title_activity_test_detail_scrolling">Detailed information about the test</string>
    <string name="select_painter_width">Please select your preferred painter width</string>
    <string-array name="painter_width">
        <item>Width 5</item>
        <item>Width 10</item>
        <item>Width 15</item>
    </string-array>
    <string-array name="delete_options">
        <item>Delete all test data</item>
        <item>Delete test data before a specific date</item>
        <item>Delete all user and test data, this will restart the app</item>
    </string-array>
    <string name="channel_name">Neurograph</string>
    <string name="registeration_code">Registration Code</string>
    <string name="please_enter_a_registration_code">Please enter a registration code</string>
    <string name="edit_your_personal_information">Edit your personal information.</string>
    <string name="button_discard">Discard</string>
    <string name="button_apply">Apply</string>
    <string name="information">Information</string>
    <string name="clean_cache">Clean Cache</string>
    <string name="output_data">Output Data</string>
    <string name="store_date_file">Store Date File</string>
    <string name="test_1">test 1</string>
    <string name="zhangsan">zhangsan</string>
    <string name="test_date">test date</string>
    <string name="test_type">test type</string>
    <string name="image_type">image type</string>
</resources>