<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share_data"
        android:orderInCategory="100"
        android:title="@string/output_data"
        android:icon="@drawable/ic_action_share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_store_file"
        android:orderInCategory="200"
        android:title="@string/store_date_file"
        android:icon="@drawable/ic_action_folder"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:title="@string/data_list"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="always" />


</menu>
