<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_colour"
        android:orderInCategory="100"
        android:title="@string/data_list"
        android:icon="@drawable/ic_action_colour"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_information"
        android:orderInCategory="200"
        android:title="@string/information"
        android:icon="@drawable/ic_action_new_release_info"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cache"
        android:orderInCategory="300"
        android:title="@string/clean_cache"
        android:icon="@drawable/ic_action_delete_sweep"
        app:showAsAction="always" />

</menu>