<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jiashuwu.neurograph.InformationCollectionActivity"
    tools:showIn="@layout/activity_information_collection">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_preface"
            android:text="@string/information_collection_preface"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_registration_code_textview"
            android:text="@string/registeration_code"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_preface" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/information_collection_registration_code_textview"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/please_enter_a_registration_code"
            android:id="@+id/information_collection_registration_code_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_name_textview"
            android:text="@string/full_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_registration_code_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_name_edittext"
            android:hint="@string/enter_full_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_name_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_age_textview"
            android:text="@string/age"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_name_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_age_edittext"
            android:hint="@string/enter_age"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_age_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_gender_textview"
            android:text="@string/gender"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_age_edittext" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_gender_spinner"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/information_collection_gender_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_education_textview"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/select_education"
            android:layout_below="@id/information_collection_gender_spinner" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_education_spinner"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/information_collection_education_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_ratingscore_textview"
            android:text="@string/rating_score"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_education_spinner" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_rating_score"
            android:id="@+id/information_collection_ratingscore_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_ratingscore_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_treatment_textview"
            android:text="@string/current_receiving_treatment"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/information_collection_ratingscore_edittext" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_radiogroup"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/information_collection_treatment_textview" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:checked="false"
                android:id="@+id/information_collection_radio_yes"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="false"
                android:id="@+id/information_collection_radio_no"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/information_collection_next_button"
            android:layout_below="@id/information_collection_radiogroup"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/next" />


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
