<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.jiashuwu.neurograph.PersonalInformationEditPageActivity"
    tools:showIn="@layout/activity_personal_information_edit_page">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_preface"
            android:text="@string/edit_your_personal_information"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_registration_code_textview"
            android:text="@string/registeration_code"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_preface" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_information_edit_registration_code_textview"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:hint="@string/please_enter_a_registration_code"
            android:id="@+id/personal_information_edit_registration_code_edittext" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_name_textview"
            android:text="@string/full_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="36dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_registration_code_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_name_edittext"
            android:hint="@string/enter_full_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_name_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_age_textview"
            android:text="@string/age"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_name_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_age_edittext"
            android:hint="@string/enter_age"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_age_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_gender_textview"
            android:text="@string/gender"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_age_edittext" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_gender_spinner"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/personal_information_edit_gender_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_education_textview"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/select_education"
            android:layout_below="@id/personal_information_edit_gender_spinner" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_education_spinner"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/personal_information_edit_education_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_ratingscore_textview"
            android:text="@string/rating_score"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_education_spinner" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_rating_score"
            android:id="@+id/personal_information_edit_ratingscore_edittext"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_ratingscore_textview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_treatment_textview"
            android:text="@string/current_receiving_treatment"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:layout_below="@id/personal_information_edit_ratingscore_edittext" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/personal_information_edit_radiogroup"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_below="@id/personal_information_edit_treatment_textview" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:checked="false"
                android:id="@+id/personal_information_edit_radio_yes"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:checked="false"
                android:id="@+id/personal_information_edit_radio_no"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/personal_information_edit_radiogroup"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp" >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personal_information_edit_discard_button"
                android:text="@string/button_discard"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="6dp"
                android:layout_weight="1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/personal_information_edit_next_button"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:text="@string/button_apply" />


        </LinearLayout>


    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>
